改用弹性盒模型 布局方式改为流体百分比布局

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     }
 
     .section_1 section {
-      max-width: 300px;
+      max-width: 70%;
       line-height: 1.5;
       color: #fff;
       z-index: 100
