--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     text-align: center;
     background: #FFF;
     color: #000;
+    max-width: 100%
   }
 
   .section_1 {
@@ -267,7 +268,7 @@
   </div>
 </body>
 <script src="js/jquery.js"></script>
-<script src="http://cdn.dowebok.com/131/js/wow.min.js"></script>
+<script src="js/wow.min.js"></script>
 <script>
   window.onload = function () {
     const h = window.innerHeight;
