--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>子谦的个人网站</title>
+  <title>子谦原创模板</title>
   <link rel="stylesheet" href="css/animate.css">
 </head>
 <style>
@@ -37,11 +37,9 @@
     background-size: 100% 110%;
     background-attachment: fixed;
   }
-/* 手机 */
+
+  /* 手机 */
   @media screen and (max-width:600px) {
-    body{
-    max-width:100%
-    }
     .section_1 {
       display: flex;
       align-items: center;
@@ -59,16 +57,17 @@
       font-size: 30px;
       font-weight: 700;
     }
+
     .btn {
       margin: 0 auto
     }
 
-  .navbar {
-    position: fixed;
-    top: 30px;
-    left: 5px;
-    z-index: 999;
-  }
+    .navbar {
+      position: fixed;
+      top: 30px;
+      left: 5px;
+      z-index: 999;
+    }
 
 
     .btn {
@@ -92,16 +91,18 @@
       width: 70%;
       background-color: rgba(255, 255, 255, 0.7)
     }
-    .section_2 secction:last-of-type{
-      margin-top:50px;
+
+    .section_2 secction:last-of-type {
+      margin-top: 50px;
       position: relative
     }
+
     .section_2 section .btn {
       left: auto;
       right: auto;
       bottom: 20px;
-      position:absolute
-  }
+      position: absolute
+    }
   }
 
   /* 平板 pc */
@@ -151,12 +152,13 @@
       background-color: #DE7178;
       border-radius: 5px
     }
+
     .navbar {
-    position: fixed;
-    top: 100px;
-    left: 100px;
-    z-index: 999;
-  }
+      position: fixed;
+      top: 100px;
+      left: 100px;
+      z-index: 999;
+    }
 
   }
 
@@ -190,7 +192,7 @@
     background-color: #E8313D;
   }
 
- 
+
   .navbar .show {
     background-color: rgba(255, 255, 255, 0.5);
     display: flex;
@@ -235,7 +237,6 @@
     transform: scale(1);
     z-index: 1;
   }
-
 </style>
 
 <body>
